--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "django (>=5.1.6,<6.0.0)",
     "django-crispy-forms (>=2.3,<3.0)",
     "crispy-bootstrap4 (>=2024.10,<2025.0)",
-    "fontawesomefree (>=6.6.0,<7.0.0)"
+    "fontawesomefree (>=6.6.0,<7.0.0)",
+    "pillow (>=11.1.0,<12.0.0)"
 ]
 
 [tool.poetry]
